--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -87,10 +87,11 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	logging.config  设置校验服务日志路径为config/log4j2.xml文件绝对路径
 	bootstrap-servers 为kafka工作地址，默认安装可不修改
 	spring.memory-monitor-enable 打印校验进程内存使用情况，默认false,不打印
+	spring.check.core-pool-size: 2 并发线程数池设置，最小线程数，可不修改，默认2
+    spring.check.maximum-pool-size: 20 并发线程数池设置，最大线程数，可不修改，默认20
 	data.check.data-path 校验结果输出地址，默认配置可不修改
 	data.check.source-uri 源端服务请求地址，默认配置可不修改
 	data.check.sink-uri 目标端服务请求地址，默认配置可不修改
-	data.check.core-pool-size 并发线程数设置，根据当前环境配置，可不修改，默认10，设置为0则系统自动分配
 	data.check.max-retry-times 心跳等最大尝试次数，默认1000
 	data.check.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
     data.check.auto-delete-topic: 配置是否自动删除Topic，0不删除，1校验全部完成后删除，2表校验完成后删除，默认值为2
@@ -106,7 +107,9 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	spring.memory-monitor-enable 打印校验进程内存使用情况，默认false,不打印
 	spring.check.server-uri 校验服务请求地址，默认配置可不修改
 	spring.extract.schema 当前校验数据schema，mysql 数据库名称
-	spring.extract.core-pool-size 并发线程数设置，根据当前环境配置，可不修改，默认10，设置为0则系统自动分配
+	spring.check.core-pool-size: 2 并发线程数池设置，最小线程数，可不修改，默认2
+    spring.check.maximum-pool-size: 20 并发线程数池设置，最大线程数，可不修改，默认20
+    spring.extract.query-dop 默认为1，不开启表内并行查询，大于1则开启表内查询，若为opengauss，则用于设置opengauss并行查询参数。
 	spring.extract.max-retry-times 心跳等最大尝试次数，默认1000
 	spring.extract.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
 	bootstrap-servers 为kafka工作地址，默认安装可不修改
@@ -128,7 +131,9 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	spring.memory-monitor-enable 打印校验进程内存使用情况，默认false,不打印
 	spring.check.server-uri 校验服务请求地址，默认配置可不修改
 	spring.extract.schema 当前校验数据schema，opengauss schema名称
-	spring.extract.core-pool-size 并发线程数设置，根据当前环境配置，可不修改，默认10，设置为0则系统自动分配
+	spring.check.core-pool-size: 2 并发线程数池设置，最小线程数，可不修改，默认2
+    spring.check.maximum-pool-size: 20 并发线程数池设置，最大线程数，可不修改，默认20
+    spring.extract.query-dop 默认为1，不开启表内并行查询，大于1则开启表内查询，若为opengauss，则用于设置opengauss并行查询参数。
 	spring.extract.max-retry-times 心跳等最大尝试次数，默认1000
 	spring.extract.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
 	bootstrap-servers 为kafka工作地址，默认安装可不修改
@@ -359,7 +364,7 @@ bin/connect-standalone.sh -daemon config/connect-standalone.properties config/my
 
 ## 7、校验性能测试设计
 
-性能测试设计，要求满足如上所示 “**环境要求**”。
+性能测试设计，要求满足如上所示 “**环境要求**”。当前校验工具性能可满足150M/s。
 
 ### 7.1 表设计
 
@@ -388,8 +393,6 @@ CREATE TABLE `t_datacheck_templete` (
 COLLATE='utf8_general_ci'
 ENGINE=InnoDB
 ;
-
-
 ```
 
 
@@ -408,38 +411,7 @@ JVM参数如下：-Xmx5G -Xms5G -XX:MaxMetaspaceSize=1G -XX:MetaspaceSize=1G -XX
 
 根据当前机器可用内存大小和数据量大小适当调整。
 
-### 7.4 测试场景结果
-
-校验工具性能测试，在高性能环境场景下，设置抽取服务和校验服务JVM启动参数，并对下列校验场景进行测试。
-
-校验速率测试场景如下，基本达到校验速率70M /s
-
-| 表数量  | 单表数据量 | 总大小(M) | 校验速率（M/s） |
-| ------- | ---------- | --------- | --------------- |
-| 1张表   | 500万      | 2817M     | 112M/s          |
-| 5张表   | 100万      | 2818M     | 90M/s           |
-| 10张表  | 50万       | 2818M     | 112M/s          |
-| 25张表  | 20万       | 2819M     | 140M/s          |
-| 50张表  | 10万       | 2824M     | 156M/s          |
-| 100张表 | 5万        | 2825M     | 156M/s          |
-| 200张表 | 2万        | 2838M     | 113M/s          |
-| 250张表 | 2.5万      | 2836M     | 109M/s          |
-| 500张表 | 1万        | 2844M     | 71M/s           |
-
-
-
-JVM参数如下：-Xmx50G -Xms50G -XX:MaxMetaspaceSize=1G -XX:MetaspaceSize=1G -XX:+UseG1GC
-
-校验速率测试场景如下，基本达到校验速率70M /s
-
-| 表数量   | 单表数据量 | 总大小(M) | 校验速率（M/s） |
-| -------- | ---------- | --------- | --------------- |
-| 3张表    | 1亿        | 156G      | 115M/s          |
-| 3000张表 | 10万       | 155G      | 174M/s          |
-
-
-
-### **7.5 数据校验速率计算参考**
+### **7.4 数据校验速率计算参考**
 
 ```
 校验速率 = 源端数据库大小 / 校验时间  
