文档修改更新

--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -87,8 +87,9 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	logging.config  设置校验服务日志路径为config/log4j2.xml文件绝对路径
 	bootstrap-servers 为kafka工作地址，默认安装可不修改
 	spring.memory-monitor-enable 打印校验进程内存使用情况，默认false,不打印
-	spring.check.core-pool-size: 2 并发线程数池设置，最小线程数，可不修改，默认2
-    spring.check.maximum-pool-size: 20 并发线程数池设置，最大线程数，可不修改，默认20
+	spring.check.core-pool-size: 1 并发线程数池设置，最小线程数，可不修改，默认1
+    spring.check.maximum-pool-size: 4 并发线程数池设置，最大线程数，可不修改，默认4
+    
 	data.check.data-path 校验结果输出地址，默认配置可不修改
 	data.check.source-uri 源端服务请求地址，默认配置可不修改
 	data.check.sink-uri 目标端服务请求地址，默认配置可不修改
@@ -107,9 +108,11 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	spring.memory-monitor-enable 打印校验进程内存使用情况，默认false,不打印
 	spring.check.server-uri 校验服务请求地址，默认配置可不修改
 	spring.extract.schema 当前校验数据schema，mysql 数据库名称
-	spring.check.core-pool-size: 2 并发线程数池设置，最小线程数，可不修改，默认2
-    spring.check.maximum-pool-size: 20 并发线程数池设置，最大线程数，可不修改，默认20
-    spring.extract.query-dop 默认为1，不开启表内并行查询，大于1则开启表内查询，若为opengauss，则用于设置opengauss并行查询参数。
+	spring.check.core-pool-size: 1 并发线程数池设置，最小线程数，可不修改，默认1
+    spring.check.maximum-pool-size: 5 并发线程数池设置，最大线程数，可不修改，默认5
+    spring.check.maximum-topic-size: 5 并发最大topic数量，可不修改，默认5
+    spring.check.maximum-table-slice-size: 100000 并行抽取分片表记录数，默认100000
+    spring.extract.query-dop 默认为8，开启表内并行查询，大于1则开启表内查询，若为opengauss，则用于设置opengauss并行查询参数。为1则不开启
 	spring.extract.max-retry-times 心跳等最大尝试次数，默认1000
 	spring.extract.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
 	bootstrap-servers 为kafka工作地址，默认安装可不修改
@@ -131,8 +134,10 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	spring.memory-monitor-enable 打印校验进程内存使用情况，默认false,不打印
 	spring.check.server-uri 校验服务请求地址，默认配置可不修改
 	spring.extract.schema 当前校验数据schema，opengauss schema名称
-	spring.check.core-pool-size: 2 并发线程数池设置，最小线程数，可不修改，默认2
-    spring.check.maximum-pool-size: 20 并发线程数池设置，最大线程数，可不修改，默认20
+	spring.check.core-pool-size: 1 并发线程数池设置，最小线程数，可不修改，默认1
+    spring.check.maximum-pool-size: 5 并发线程数池设置，最大线程数，可不修改，默认5
+    spring.check.maximum-topic-size: 5 并发最大topic数量，可不修改，默认5
+    spring.check.maximum-table-slice-size: 100000 并行抽取分片表记录数，默认100000
     spring.extract.query-dop 默认为1，不开启表内并行查询，大于1则开启表内查询，若为opengauss，则用于设置opengauss并行查询参数。
 	spring.extract.max-retry-times 心跳等最大尝试次数，默认1000
 	spring.extract.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
@@ -213,9 +218,13 @@ nohup java  -jar datachecker-check-0.0.1.jar >/dev/null 2>&1 &
 | 名称          | 说明                                     |
 | ------------- | ---------------------------------------- |
 | mode          | FULL \| INCREMENT                        |
-| tableCount    | 校验表总数量                             |
 | status        | 当前校验状态{1未开始 \| 2 进行中 3 完成} |
+| tableCount    | 校验表总数量                             |
 | completeCount | 当前完成校验总数                         |
+| total         | 完成校验表数量大小（M）                  |
+| totalRows     | 完成校验表记录数量                       |
+| speed         | 当前校验速率（M/s）                      |
+| avgSpeed      | 当前校验平均速率（M/s）                  |
 | cost          | 当前耗时（秒）                           |
 | startTime     | 校验开始时间（yyyy-MM-dd HH:mm:ss）      |
 | endTime       | 校验截止时间（yyyy-MM-dd HH:mm:ss）      |
