--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -119,9 +119,14 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	
 	数据源配置
 	工具默认采用druid数据源，用户可以自定义配置连接池参数,可根据当前校验数据库任务数量（表数量）进行调整 
+	driver-class-name: 数据库驱动名称，可根据源端数据库类型配置，具体见配置文件模板
+    url: jdbc连接串，可根据源端数据库类型及库名进行配置，具体见配置文件模板
+    username: 源端数据库用户名
+    password: 源端数据库密码，需加单引号
 	initialSize: 5 默认初始连接大小
 	minIdle: 10 默认最小连接池数量
 	maxActive: 20 默认激活数据库连接数量
+	validationQuery: jdbc保活查询语句，不修改
 	
 ```
 
@@ -145,6 +150,10 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	
 	数据源配置
 	工具默认采用druid数据源，用户可以自定义配置连接池参数，可根据当前校验数据库任务数量（表数量）进行调整
+	driver-class-name: 数据库驱动名称，可根据目标端数据库类型配置，具体见配置文件模板
+    url: jdbc连接串，可根据目标端数据库类型及库名进行配置，具体见配置文件模板
+    username: 目标端数据库用户名
+    password: 目标端数据库密码，需加单引号
 	initialSize: 5 默认初始连接大小
 	minIdle: 10 默认最小连接池数量
 	maxActive: 20 默认激活数据库连接数量
@@ -507,10 +516,10 @@ rules:
 
 ```
 1、JDK版本要求JDK11+
-2、当前版本仅支持对源端MySQL，目标端openGauss数据校验
+2、当前版本仅支持对源端为MySQL或openGauss，目标端也是MySQL或openGauss数据校验
 3、当前版本仅支持数据校验，不支持表对象校验
 4、MYSQL需要5.7+版本
-5、当前版本不支持地理位置几何图形数据校验
+5、当前版本对地理位置几何图形只支持openGauss到openGauss的数据校验
 6、校验工具当前不支持校验中断(网络故障、kill进程等)自动恢复。
 7、数据校验行级过滤规则配置，只支持[offset,count]指定范围内抽取，不支持排除[offset,count]范围之内的数据过滤。
 8、行过滤规则抽取中间范围内数据（例如：[10,100]），如果源端在该范围之前的数据[0,10]发生删除操作，则会导致该表在指定范围内数据发生偏移，从而导致数据校验结果产生差异。此时需要扩大前置下标范围,以及增加相应的抽取数量。即[3,107]。
