--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -519,7 +519,7 @@ rules:
 2、当前版本仅支持对源端为MySQL或openGauss，目标端也是MySQL或openGauss数据校验
 3、当前版本仅支持数据校验，不支持表对象校验
 4、MYSQL需要5.7+版本
-5、当前版本对地理位置几何图形只支持openGauss到openGauss的数据校验
+5、当前版本对地理位置几何图形只支持openGauss到openGauss的数据校验，bit类型不支持openGauss到MySQL的校验
 6、校验工具当前不支持校验中断(网络故障、kill进程等)自动恢复。
 7、数据校验行级过滤规则配置，只支持[offset,count]指定范围内抽取，不支持排除[offset,count]范围之内的数据过滤。
 8、行过滤规则抽取中间范围内数据（例如：[10,100]），如果源端在该范围之前的数据[0,10]发生删除操作，则会导致该表在指定范围内数据发生偏移，从而导致数据校验结果产生差异。此时需要扩大前置下标范围,以及增加相应的抽取数量。即[3,107]。
