校验性能增加资料约束

--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -382,7 +382,7 @@ bin/connect-standalone.sh -daemon config/connect-standalone.properties config/my
 
 ## 7、校验性能测试设计
 
-性能测试设计，要求满足如上所示 “**环境要求**”。当前校验工具性能可满足150M/s。
+性能测试设计，要求满足如上所示 “**环境要求**”。在50张表每张表1千万记录场景下，校验性能使用sysbench模型以及t_datacheck_templete模型，校验速率达到20万条/秒，其中使用t_datacheck_templete模型可以达到（150+M/s）
 
 ### 7.1 表设计
 
