OgCompatibility B库单引号适配，解决关闭dolphin.sql_mode ansi_quotes双引号引起SQL错误

--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -390,27 +390,31 @@ bin/connect-standalone.sh -daemon config/connect-standalone.properties config/my
 
 ```
 CREATE TABLE `t_datacheck_templete` (
-	`id` INT(10) UNSIGNED NOT NULL AUTO_INCREMENT,
-	`c_int` INT(10) UNSIGNED NOT NULL DEFAULT '0',
-	`c_char` CHAR(120) NOT NULL DEFAULT '' COLLATE 'utf8_general_ci',
-	`c_pad` CHAR(60) NOT NULL DEFAULT '' COLLATE 'utf8_general_ci',
-	`c_char2` CHAR(80) NOT NULL DEFAULT '' COLLATE 'utf8_general_ci',
-	`c_varchar` VARCHAR(300) NOT NULL DEFAULT '' COLLATE 'utf8_general_ci',
-	`c_date` DATE NOT NULL DEFAULT '2021-08-12',
-	`c_timestamp` TIMESTAMP NULL DEFAULT CURRENT_TIMESTAMP COMMENT '当前时间',
+	`id` INT(11) UNSIGNED NOT NULL AUTO_INCREMENT,
+	`c_int` INT(11) NULL DEFAULT NULL,
+	`c_bigint` BIGINT(20) NULL DEFAULT NULL,
+	`c_bigint2` BIGINT(20) NULL DEFAULT NULL,
+	`c_char` CHAR(120) NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	`c_char2` CHAR(120) NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	`c_char3` CHAR(120) NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	`c_varchar` VARCHAR(300) NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	`c_varchar2` VARCHAR(300) NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	` c_text` TEXT NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	` c_text2` TEXT NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	`c_date` DATE NULL DEFAULT NULL,
 	`c_time` TIME NULL DEFAULT NULL,
-	`c_float` FLOAT(3,2) NULL DEFAULT NULL,
-	`c_double` DOUBLE(5,4) NULL DEFAULT NULL,
-	`c_decimal` DECIMAL(6,4) NULL DEFAULT NULL,
-	`c_decimal2` DECIMAL(7,6) NULL DEFAULT NULL,
-	`c_enum` ENUM('a','b','c','d') NULL DEFAULT NULL COLLATE 'utf8_general_ci',
-	`c_mediumtxt` MEDIUMTEXT NULL DEFAULT NULL COLLATE 'utf8_general_ci',
-	PRIMARY KEY (`id`) USING BTREE,
-	INDEX `index_c_int_1` (`c_int`) USING BTREE
+	` c_timestamp` TIMESTAMP NULL DEFAULT NULL,
+	`c_float` FLOAT NULL DEFAULT NULL,
+	`c_double` DOUBLE NULL DEFAULT NULL,
+	`c_decimal` DECIMAL(20,6) NULL DEFAULT NULL,
+	`c_decimal2` DECIMAL(20,6) NULL DEFAULT NULL,
+	`c_enum` ENUM('Y','N') NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	PRIMARY KEY (`id`) USING BTREE
 )
-COLLATE='utf8_general_ci'
+COLLATE='utf8mb4_general_ci'
 ENGINE=InnoDB
 ;
+
 ```
 
 
