【测试版本：5.1.1】修复分片不一致导致校验结果不准确问题

--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -110,8 +110,9 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	spring.extract.schema 当前校验数据schema，mysql 数据库名称
 	spring.check.core-pool-size: 1 并发线程数池设置，最小线程数，可不修改，默认1
     spring.check.maximum-pool-size: 5 并发线程数池设置，最大线程数，可不修改，默认5
-    spring.check.maximum-topic-size: 5 并发最大topic数量，可不修改，默认5
+    spring.check.maximum-topic-size: 3 并发最大topic数量，可不修改，默认3
     spring.check.maximum-table-slice-size: 100000 并行抽取分片表记录数，默认100000
+    spring.check.extend-maximum-pool-size： 10 当大表分片数超过20时，对表级分片抽取并发线程池设置，最大线程数，可不修改，默认10
     spring.extract.query-dop 默认为8，开启表内并行查询，大于1则开启表内查询，若为opengauss，则用于设置opengauss并行查询参数。为1则不开启
 	spring.extract.max-retry-times 心跳等最大尝试次数，默认1000
 	spring.extract.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
@@ -141,8 +142,9 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 	spring.extract.schema 当前校验数据schema，opengauss schema名称
 	spring.check.core-pool-size: 1 并发线程数池设置，最小线程数，可不修改，默认1
     spring.check.maximum-pool-size: 5 并发线程数池设置，最大线程数，可不修改，默认5
-    spring.check.maximum-topic-size: 5 并发最大topic数量，可不修改，默认5
+    spring.check.maximum-topic-size: 3 并发最大topic数量，可不修改，默认3
     spring.check.maximum-table-slice-size: 100000 并行抽取分片表记录数，默认100000
+    spring.check.extend-maximum-pool-size： 10 当大表分片数超过20时，表级分片抽取并发线程池设置，最大线程数，可不修改，默认10
     spring.extract.query-dop 默认为1，不开启表内并行查询，大于1则开启表内查询，若为opengauss，则用于设置opengauss并行查询参数。
 	spring.extract.max-retry-times 心跳等最大尝试次数，默认1000
 	spring.extract.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
@@ -399,11 +401,11 @@ CREATE TABLE `t_datacheck_templete` (
 	`c_char3` CHAR(120) NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
 	`c_varchar` VARCHAR(300) NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
 	`c_varchar2` VARCHAR(300) NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
-	` c_text` TEXT NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
-	` c_text2` TEXT NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	`c_text` TEXT NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
+	`c_text2` TEXT NULL DEFAULT NULL COLLATE 'utf8mb4_general_ci',
 	`c_date` DATE NULL DEFAULT NULL,
 	`c_time` TIME NULL DEFAULT NULL,
-	` c_timestamp` TIMESTAMP NULL DEFAULT NULL,
+	`c_timestamp` TIMESTAMP NULL DEFAULT NULL,
 	`c_float` FLOAT NULL DEFAULT NULL,
 	`c_double` DOUBLE NULL DEFAULT NULL,
 	`c_decimal` DECIMAL(20,6) NULL DEFAULT NULL,
@@ -433,7 +435,15 @@ JVM参数如下：-Xmx5G -Xms5G -XX:MaxMetaspaceSize=1G -XX:MetaspaceSize=1G -XX
 
 根据当前机器可用内存大小和数据量大小适当调整。
 
-### **7.4 数据校验速率计算参考**
+### 7.4  数据校验 调优配置
+数据校验工具主要耗时在数据抽取阶段，在数据校验抽取端调整以下配置，可以达到较高的数据校验性能。
+| 参数                | 建议值 | 描述                                                         |
+| ------------------- | ------ | ------------------------------------------------------------ |
+| spring.check.maximum-topic-size  | 3      | 数据抽取端并发最大topic数量，该参数决定表并发抽取的数量，调大此参数时，性能会有一定提升，但是过大时会造成抽取端占用内存，等待数据库连接，造成资源不能合理使用，性能下降。该参数的建议值是3 |
+| spring.check.maximum-table-slice-size      | 100000    | 数据抽取端表分片大小，该参数决定表内数据分片抽取的大小，当该参数较小时，频繁消耗数据库连接，成为性能瓶颈，调大该参数，可提升数据抽取性能，但是该值对内存影响较大，过大会造成性能下降。该参数的建议值是100000。 |
+| spring.check.extend-maximum-pool-size | 10   | 表级分片抽取并发线程池设置，该参数决定处理分片抽取线程池的最大线程数，过大会造成频繁等待数据库连接，默认为10         |
+
+### **7.5 数据校验速率计算参考**
 
 ```
 校验速率 = 源端数据库大小 / 校验时间  
