fixed bug I8DGQB JDBC并行分片校验退出失败异常修复

--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -243,16 +243,26 @@ nohup java  -jar datachecker-check-0.0.1.jar >/dev/null 2>&1 &
 
 ##### **5.8.4 校验汇总日志说明**
 
-| 名称         | 说明                                |
-| ------------ | ----------------------------------- |
-| mode         | FULL \| INCREMENT                   |
-| tableCount   | 校验表总数量                        |
-| successCount | 成功表总个数                        |
-| failedCount  | 失败表总个数                        |
-| rowCount     | 备用                                |
-| cost         | 校验总耗时（秒）                    |
-| startTime    | 校验开始时间（yyyy-MM-dd HH:mm:ss） |
-| endTime      | 校验截止时间（yyyy-MM-dd HH:mm:ss） |
+| 名称         | 下级名称             | 说明                                |
+| ------------ | -------------------- | ----------------------------------- |
+| mode         |                      | FULL \| INCREMENT                   |
+| tableCount   |                      | 校验表总数量                        |
+| successCount |                      | 成功表总个数                        |
+| failedCount  |                      | 失败表总个数                        |
+| rowCount     |                      | 行记录总数                          |
+| missTable    |                      | 校验源端或目标端缺少表信息          |
+|              | sinkLoss             | 目标端丢失表数量                    |
+|              | sinkExcess           | 目标端多出表数量                    |
+|              | miss                 | 缺失校验表数量                      |
+|              | lossTables           | 丢失表列表                          |
+|              | excessTables         | 多出表列表                          |
+|              | sourceTableTotalSize | 源端表总数                          |
+|              | sinkTableTotalSize   | 目标端表总数                        |
+| cost         |                      | 校验总耗时（秒）                    |
+| startTime    |                      | 校验开始时间（yyyy-MM-dd HH:mm:ss） |
+| endTime      |                      | 校验截止时间（yyyy-MM-dd HH:mm:ss） |
+
+
 
 ##### **5.8.5 成功详情日志说明**
 
