oracle 迁移数据校验适配

--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -184,7 +184,7 @@ nohup java  -jar datachecker-check-0.0.1.jar >/dev/null 2>&1 &
 2、校验服务启动后，会检测抽取端的表数据信息是否加载完成，如果在一定时间内，未完成加载，则校验服务会自行退出。这时需要查询源端和宿端的表信息加载进度，通过日志信息查看加载进度。或者直接重新启动校验服务。
 3、增量校验服务启动，需要修改源端配置文件\config\application-source.yml 中	debezium-enable:true并配置其他 debezium相关配置，服务启动即可开启增量校验服务
 4、服务启动参数与部署方式，会对校验性能产生一定的影响。
-   启动参数：校验服务和抽取进程 增加java虚拟机参数 -Xmx、 -Xms 参数设置（1G -10G）各进程参数保持一致即可
+   启动参数：校验服务和抽取进程 增加java虚拟机参数 -Xmx、 -Xms 参数设置各进程参数保持一致即可
    启动参数增加元空间大小设置参考值：  -XX:MaxMetaspaceSize=1024M -XX:MetaspaceSize=1024M
    GC设置参考： -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:+ParallelRefProcEnabled
    部署方式：将抽取服务分别部署源端和目标端的数据库节点，校验服务和kafka可以部署在单独机器上。
@@ -232,10 +232,9 @@ nohup java  -jar datachecker-check-0.0.1.jar >/dev/null 2>&1 &
 | status        | 当前校验状态{1未开始 \| 2 进行中 3 完成} |
 | tableCount    | 校验表总数量                             |
 | completeCount | 当前完成校验总数                         |
-| total         | 完成校验表数量大小（M）                  |
-| totalRows     | 完成校验表记录数量                       |
-| speed         | 当前校验速率（M/s）                      |
-| avgSpeed      | 当前校验平均速率（M/s）                  |
+| total         | 完成校验表记录总数                       |
+| rows          | 当前新增完成校验表记录数量               |
+| avgSpeed      | 当前校验平均速率（tps/s）                |
 | cost          | 当前耗时（秒）                           |
 | startTime     | 校验开始时间（yyyy-MM-dd HH:mm:ss）      |
 | endTime       | 校验截止时间（yyyy-MM-dd HH:mm:ss）      |
@@ -540,9 +539,9 @@ rules:
 
 ```
 1、JDK版本要求JDK11+
-2、当前版本仅支持对源端为MySQL或openGauss，目标端也是MySQL或openGauss数据校验
+2、当前版本支持对源端和目标端为MySQL、oracle或openGauss的数据校验
 3、当前版本仅支持数据校验，不支持表对象校验
-4、MYSQL需要5.7+版本
+4、MYSQL需要5.7+版本，opengauss要求3.0.0+，oracle目前支持版本19c，另外oracle驱动需用户手动添加到lib目录中。
 5、当前版本对地理位置几何图形只支持openGauss到openGauss的数据校验，bit类型不支持openGauss到MySQL的校验
 6、校验工具当前不支持校验中断(网络故障、kill进程等)自动恢复。
 7、数据校验行级过滤规则配置，只支持[offset,count]指定范围内抽取，不支持排除[offset,count]范围之内的数据过滤。
