chameleon与datachecker协同使用，浮点类型数据存在不一致问题

--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -533,9 +533,63 @@ rules:
 
 **说明：rules.table表级规则优先级最高，完成表过滤后，行列规则再进行匹配。如果列规则配置的表未匹配到，则自动忽略该规则。**
 
+## 9、与chameleon协同
+
+### 9.1、 chameleon配置
+
+chameleon 配置项设置：
+
+with_datacheck：yes则迁移与校验协同任务打开
+
+slice_size: 为数字选项，该选项用于设置chameleon对单一主键大表进行分片的大小设置，代表根据slice_size行记录进行文件分割
+
+```
+with_datacheck: yes
+slice_size: 100000
+
+```
+
+### 9.2、 gs_datacheck协同配置
+
+校验端配置修改
+
+```
+spring.check.floating-point-data-supply-zero: true # 当进行协同使用时，该配置必须设置为true,不进行协同时，则必须设置为false
+spring.csv.sync: true # 用于打开chameleon协同同步配置，设置为true则打开
+spring.csv.schema: test_schema # 设置当前同步迁移的MySQL端数据库名称 
+spring.csv.path: 用于指定当前chameleon迁移数据缓存目录
+```
+
+源端配置修改
+
+```
+spring.extract.dataLoadMode: csv # 协同时修改源端加载模式为csv
+spring.extract.schema: # 为源端MySQL迁移数据库名称
+spring.extract.databaseType：MS # 与chameleon协同，该选项必须为MS。chameleon只支持MySQL迁移。
+spring.datasource : #为数据源，源端可不进行配置
+```
+
+目标端配置修改
+
+```
+spring.extract.schema: # 为chameleon迁移到目标库的临时schema,即 _schemaName_tmp
+```
 
 
-## **9、 限制与约束**
+
+### 9.3、chameleon与gs_datacheck 协同启动
+
+```
+步骤一：启动chameleon，开始迁移任务
+	  chameleon init_replica --config opengaussv5 --source mysql
+步骤二：启动校验抽取进程与校验进程
+	sh extract-endpoints.sh start
+	sh check-endpoint.sh start
+```
+
+
+
+## **10、 限制与约束**
 
 ```
 1、JDK版本要求JDK11+
