oralce场景 blob字段为空时获取null以及Raw类型适配

--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -43,6 +43,7 @@ gs_guc set -N all -I all -c "synchronize_seqscans=off"
 gs_guc set -D datadir -c "query_dop=8";
 or
 gs_guc set -N all -I all -c "query_dop=8";
+
 ```
 
 
@@ -301,6 +302,19 @@ nohup java  -jar datachecker-check-0.0.1.jar >/dev/null 2>&1 &
 ##### **5.8.7 失败表修复报告说明**
 
 失败修复报告为纯文本修复SQL内容
+
+#### 5.9 注意事项
+
+​	1、mysql数据库中char(n) 类型映射迁移到opengauss B库中为character(n)类型。char与character类型均为定长类型，mysql 查询char类型字段值默认不追加末尾空格。opengauss查询character默认追加空格。该特性保持一致则需要opengauss设置sql_mode，并取消pad_char_to_full_length模式
+
+```
+show dolphin.sql_mode;
+                                                                    dolphin.sql_mode
+---------------------------------------------------------------------------------------------------------------------------------------------------------
+ sql_mode_strict,sql_mode_full_group,pipes_as_concat,ansi_quotes,no_zero_date,pad_char_to_full_length,auto_recompile_function,error_for_division_by_zero
+```
+
+
 
 ## 6、增量校验
 #### 6.1 下载debezium-connector插件
