--- a/校验工具使用指导.md
+++ b/校验工具使用指导.md
@@ -60,11 +60,11 @@ gs_guc set -N all -I all -c "query_dop=8";
 
 #### **5.1 启动Zookeeper**
 
-```
-cd {path}/confluent-7.2.0
+```shell
+cd {path}/confluent-7.2.0  # confluent最低版本 5.5.1
 ```
 
-```
+```shell
 bin/zookeeper-server-start  etc/kafka/zookeeper.properties
 或者
 bin/zookeeper-server-start -daemon etc/kafka/zookeeper.properties
@@ -72,9 +72,9 @@ bin/zookeeper-server-start -daemon etc/kafka/zookeeper.properties
 
 #### **5.2 启动Kafka**
 
-```
+```bash
 bin/kafka-server-start etc/kafka/server.properties
-或者
+#或者
 bin/kafka-server-start -daemon etc/kafka/server.properties
 ```
 
@@ -82,85 +82,168 @@ bin/kafka-server-start -daemon etc/kafka/server.properties
 
 #### **5.3 校验服务启动配置** 
 
-```
-校验服务配置 修改application.yml文件
-	server.port 为校验服务web端口，默认可不修改
-	logging.config  设置校验服务日志路径为config/log4j2.xml文件绝对路径
-	bootstrap-servers 为kafka工作地址，默认安装可不修改
-	spring.memory-monitor-enable 打印校验进程内存使用情况，默认false,不打印
-	spring.check.core-pool-size: 1 并发线程数池设置，最小线程数，可不修改，默认1
-    spring.check.maximum-pool-size: 4 并发线程数池设置，最大线程数，可不修改，默认4
-    
-	data.check.data-path 校验结果输出地址，默认配置可不修改
-	data.check.source-uri 源端服务请求地址，默认配置可不修改
-	data.check.sink-uri 目标端服务请求地址，默认配置可不修改
-	data.check.max-retry-times 心跳等最大尝试次数，默认1000
-	data.check.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
-    data.check.auto-delete-topic: 配置是否自动删除Topic，0不删除，1校验全部完成后删除，2表校验完成后删除，默认值为2
-    data.check.increment-max-diff-count: 配置增量校验最大处理差异记录数，范围[10,5000]
-    sql_mode_pad_char_to_full_length: false # sql_mode : pad_char_to_full_length disabled
+校验服务配置 application.yml
+
+```yaml
+server:
+  port: 9000    # 为校验服务web端口，默认可不修改
+  tomcat:
+    threads:
+      max: 10 # tomcat 线程池大小
+logging:
+  config: config/log4j2.xml  #校验服务日志配置文件路径 
+spring:
+  memory-monitor-enable: false # 内存监控日志，默认关闭
+  kafka:
+    bootstrap-servers: localhost:9092 #为kafka工作地址，默认安装可不修改
+  csv: # 用于协同chameleon迁移校验
+    schema: test #协同迁移mysql 数据库名称
+    path: {chameleon_data_path}\tmp\chameleon # chameleon 迁移配置的临时数据目录
+    sleep-interval: 100 # 毫秒
+    task-dispatcher-interval: 3 # csv 任务执行周期(单位 秒)
+    max-dispatcher-size: 5 # csv task dispatcher size
+  check:
+    core-pool-size: 5  # 校验并发核心线程数
+    maximum-pool-size: 10 # 校验最大线程数
+    maximum-topic-size: 4 # 校验topic数量
+    floating-point-data-supply-zero: false #浮点数据补零默认关闭，CSV场景打开
+data:
+  check:
+    data-path: ./check_result #校验结果输出目录
+    source-uri: http://127.0.0.1:9001 #指定源端端口  server.port=9001
+    sink-uri: http://127.0.0.1:9002 #指定目标端端口 server.port=9002
+    # auto-delete-topic :  Configure whether to automatically delete topic.
+    # 0 is not delete; 1 is delete when checked all completed ; 
+    auto-delete-topic: 1 # 配置是否删除Topic, {0不删除，1删除}
+    increment-max-diff-count: 1000 #增量场景下，最大差异数量
+    max-retry-times: 20 #校验启动环境检查，失败重试次数
+    rest-api-page-size: 1000 # 设置表信息处理分页大小；用于海量表场景下控制批处理大小
+rules:
+  enable: false # 过滤规则开关，默认关闭
+  table: # 表级过滤规则
+    - name: white  # white 白名单，black 黑名单
+      text: t_test_table # 过滤表明称，或者添加正则表达式
+  row: # 行级过滤规则
+    - name: ^[a-zA-Z][a-zA-Z_]+$  # 表名称适配规则，给指定表添加行级规则
+      text: 10,100  # 行级规则，过滤表指定范围数据，为默认SQL查询结果的行号
+  column: #列级过滤规则
+     - name: t_test_table # 指定适配列级规则的表名称，必须为当前库表名称
+       text: id,c_1,c_2,c_3 #指定待过滤的字段名称
+       attribute: include # 规则类型，include：包含text中指定字段；exclude排除text中指定字段
+
 ```
 
 #### **5.4 源端服务启动配置**
 
-```
-源端服务配置 修改application-source.yml文件
-	server.port 为源端抽取服务web端口，默认可不修改
-	logging.config 设置校验服务日志路径为config/log4j2source.xml文件绝对路径
-	spring.memory-monitor-enable 打印校验进程内存使用情况，默认false,不打印
-	spring.check.server-uri 校验服务请求地址，默认配置可不修改
-	spring.extract.schema 当前校验数据schema，mysql 数据库名称
-	spring.check.core-pool-size: 1 并发线程数池设置，最小线程数，可不修改，默认1
-    spring.check.maximum-pool-size: 5 并发线程数池设置，最大线程数，可不修改，默认5
-    spring.check.maximum-topic-size: 3 并发最大topic数量，可不修改，默认3
-    spring.check.maximum-table-slice-size: 100000 并行抽取分片表记录数，默认100000
-    spring.check.extend-maximum-pool-size： 10 当大表分片数超过20时，对表级分片抽取并发线程池设置，最大线程数，可不修改，默认10
-    spring.extract.query-dop 默认为8，开启表内并行查询，大于1则开启表内查询，若为opengauss，则用于设置opengauss并行查询参数。为1则不开启
-	spring.extract.max-retry-times 心跳等最大尝试次数，默认1000
-	spring.extract.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
-	bootstrap-servers 为kafka工作地址，默认安装可不修改
-	
-	数据源配置
-	工具默认采用druid数据源，用户可以自定义配置连接池参数,可根据当前校验数据库任务数量（表数量）进行调整 
-	driver-class-name: 数据库驱动名称，可根据源端数据库类型配置，具体见配置文件模板
-    url: jdbc连接串，可根据源端数据库类型及库名进行配置，具体见配置文件模板
-    username: 源端数据库用户名
-    password: 源端数据库密码，需加单引号
-	initialSize: 5 默认初始连接大小
-	minIdle: 10 默认最小连接池数量
-	maxActive: 20 默认激活数据库连接数量
-	validationQuery: jdbc保活查询语句，不修改
-	
+```yaml
+server:
+  port: 9001 # 为校验服务源端web端口，默认可不修改
+  tomcat:
+    threads:
+      max: 10 # tomcat 线程池大小
+logging:
+  config: config/log4j2.xml #校验服务日志配置文件路径 
+spring:
+  check:
+    server-uri: http://127.0.0.1:9000 #指定校验端服务接口地址 server.port=9000
+    core-pool-size: 5 # 校验并发核心线程数
+    maximum-pool-size: 10 # 校验最大线程数
+    maximum-topic-size: 4  # 校验topic数量
+    maximum-table-slice-size: 10000  # 校验单表记录分片大小
+    extend-maximum-pool-size: 5 # 校验抽取大表扩展线程池大小
+  extract:
+    schema: test # 源端校验schema，mysql为数据库名称
+    databaseType: MS # 指定数据库类型 {MS MySQL| OG openGauss | O oracle}
+    query-dop: 8 # openGauss数据库并行查询参数，当数据库为openGauss时生效
+    dataLoadMode: jdbc # 数据加载模式 当校验连接数据库时，使用JDBC，当与chameleon协同时使用CSV
+    debezium-enable: false # 增量校验开关
+    debezium-topic: data_check_avro_inc_topic_w1 # 增量迁移debezium topic名称
+    debezium-serializer: AvroSerializer #增量数据序列化类型 StringSerializer or AvroSerializer
+    debezium-avro-registry: http://localhost:8081 # 增量 avro schema registry
+    debezium-groupId: debezium-extract-group # 增量kafkaf分组 debezium topic groupId
+    debezium-time-period: 1 # 增量校验执行周期 单位分钟
+    debezium-num-period: 1000 # 增量校验执行数据变更数量周 期
+
+  kafka:
+    bootstrap-servers: localhost:9092 #为kafka工作地址，默认安装可不修改
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/test?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    # driver-class-name: org.opengauss.Driver # For openGauss
+    # url: # jdbc:opengauss://127.0.0.1:5432/postgres?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC # For openGauss
+    # driver-class-name: oracle.jdbc.OracleDriver
+    # url: jdbc:oracle:thin:@127.0.0.1:1521/TEST
+    username: root # database user
+    password: 'password@123' # database password
+    druid:
+      initial-size: 5 # initialization connection pool size
+      min-idle: 5 # minimum number of connections
+      max-active: 20 # maximum number of connections
+      test-while-idle: true
+      test-on-borrow: true
+      validation-query: "SELECT 1 FROM DUAL"
+      validation-query-timeout: 10000
+      connection-error-retry-attempts: 0
+      break-after-acquire-failure: true
+      max-wait: 6000
+      keep-alive: true
+      min-evictable-idle-time-millis: 600000
 ```
 
 #### **5.5 目标端服务启动配置**
 
-```
-目标端服务配置 修改application-sink.yml文件
-	server.port 为目标端抽取服务web端口，默认可不修改
-	logging.config 设置校验服务日志路径为config/log4j2sink.xml文件绝对路径
-	spring.memory-monitor-enable 打印校验进程内存使用情况，默认false,不打印
-	spring.check.server-uri 校验服务请求地址，默认配置可不修改
-	spring.extract.schema 当前校验数据schema，opengauss schema名称
-	spring.check.core-pool-size: 1 并发线程数池设置，最小线程数，可不修改，默认1
-    spring.check.maximum-pool-size: 5 并发线程数池设置，最大线程数，可不修改，默认5
-    spring.check.maximum-topic-size: 3 并发最大topic数量，可不修改，默认3
-    spring.check.maximum-table-slice-size: 100000 并行抽取分片表记录数，默认100000
-    spring.check.extend-maximum-pool-size： 10 当大表分片数超过20时，表级分片抽取并发线程池设置，最大线程数，可不修改，默认10
-    spring.extract.query-dop 默认为1，不开启表内并行查询，大于1则开启表内查询，若为opengauss，则用于设置opengauss并行查询参数。
-	spring.extract.max-retry-times 心跳等最大尝试次数，默认1000
-	spring.extract.retry-interval-times 心跳、进度等最大间隔时间单位毫秒 10000
-	bootstrap-servers 为kafka工作地址，默认安装可不修改
-	
-	数据源配置
-	工具默认采用druid数据源，用户可以自定义配置连接池参数，可根据当前校验数据库任务数量（表数量）进行调整
-	driver-class-name: 数据库驱动名称，可根据目标端数据库类型配置，具体见配置文件模板
-    url: jdbc连接串，可根据目标端数据库类型及库名进行配置，具体见配置文件模板
-    username: 目标端数据库用户名
-    password: 目标端数据库密码，需加单引号
-	initialSize: 5 默认初始连接大小
-	minIdle: 10 默认最小连接池数量
-	maxActive: 20 默认激活数据库连接数量
+```yaml
+server:
+  port: 9002  # 为校验服务目标端web端口，默认可不修改
+  tomcat:
+    threads:
+      max: 10 # tomcat 线程池大小
+logging:
+  config: config/log4j2.xml #校验服务日志配置文件路径 
+spring:
+  check:
+    server-uri: http://127.0.0.1:9000 #指定校验端服务接口地址 server.port=9000
+    core-pool-size: 5 # 校验并发核心线程数
+    maximum-pool-size: 10 # 校验最大线程数
+    maximum-topic-size: 4 # 校验topic数量
+    maximum-table-slice-size: 10000 # 校验单表记录分片大小
+    extend-maximum-pool-size: 5 # 校验抽取大表扩展线程池大小
+  extract:
+    schema: test # 源端校验schema，mysql为数据库名称
+    databaseType: OG # 指定数据库类型 {MS MySQL| OG openGauss | O oracle}
+    query-dop: 8 # openGauss数据库并行查询参数，当数据库为openGauss时生效
+    dataLoadMode: jdbc # 数据加载模式 当校验连接数据库时，使用JDBC
+    debezium-enable: false # no need config,but not delete
+    debezium-topic:  # no need config,but not delete
+    debezium-groupId: # no need config,but not delete
+    debezium-serializer: AvroSerializer # StringSerializer or AvroSerializer
+    debezium-avro-registry: http://localhost:8081 # avro schema registry
+    debezium-time-period: 1 # no need config,but not delete
+    debezium-num-period: 1000 # no need config,but not delete
+  kafka:
+    bootstrap-servers: 192.168.0.114:9092
+  datasource:
+    # driver-class-name: com.mysql.cj.jdbc.Driver
+    # url: jdbc:mysql://127.0.0.1:3306/test?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    driver-class-name: org.opengauss.Driver
+    url: jdbc:opengauss://192.168.0.114:25432/test_check?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&loggerLevel=OFF
+    # driver-class-name: oracle.jdbc.OracleDriver
+    # url: jdbc:oracle:thin:@127.0.0.1:1521/TEST
+    username: jack # database user
+    password: 'password@123'   # The password text may contain special characters, which need to be enclosed in quotation marks
+    druid:
+      initial-size: 5 # initialization connection pool size
+      min-idle: 5 # minimum number of connections
+      max-active: 20 # maximum number of connections
+      test-while-idle: true
+      test-on-borrow: true
+      validation-query: "select 1"
+      validation-query-timeout: 10000
+      connection-error-retry-attempts: 0
+      break-after-acquire-failure: true
+      max-wait: 6000
+      keep-alive: true
+      min-evictable-idle-time-millis: 600000
 ```
 
 
@@ -466,6 +549,8 @@ JVM参数如下：-Xmx5G -Xms5G -XX:MaxMetaspaceSize=1G -XX:MetaspaceSize=1G -XX
 | spring.check.maximum-topic-size  | 3      | 数据抽取端并发最大topic数量，该参数决定表并发抽取的数量，调大此参数时，性能会有一定提升，但是过大时会造成抽取端占用内存，等待数据库连接，造成资源不能合理使用，性能下降。该参数的建议值是3 |
 | spring.check.maximum-table-slice-size      | 100000    | 数据抽取端表分片大小，该参数决定表内数据分片抽取的大小，当该参数较小时，频繁消耗数据库连接，成为性能瓶颈，调大该参数，可提升数据抽取性能，但是该值对内存影响较大，过大会造成性能下降。该参数的建议值是100000。 |
 | spring.check.extend-maximum-pool-size | 10   | 表级分片抽取并发线程池设置，该参数决定处理分片抽取线程池的最大线程数，过大会造成频繁等待数据库连接，默认为10         |
+| server.tomcat.threads.max | 10 | 三个配置文件中设置tomcat最大线程数修改为10 |
+| spring.check.core-pool-size | 10 | core-pool-size并发任务最小核心线程数，在资源受限场景下该值可能会降低到最低核心线程数，该配置初始值不应太小。 |
 
 ### **7.5 数据校验速率计算参考**
 
